fix front branch

--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/symfony,windows,linux,macos,phpstorm+all
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
