send welcome mail

--- a/.env
+++ b/.env
@@ -30,3 +30,4 @@ APP_SECRET=a1d322fd5bd884fc2a22ff5bc6480eb2
 DATABASE_URL="mysql://root:@127.0.0.1:3306/crm_nfactory?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+MAILER_DSN=gmail://projet.crm.nfactory.NDBBLF@gmail.com:bYA6694AyzhL7Lj@localhost
