--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
-        "full:install": "yarn install && composer install && symfony server:start "
+        "full:install": "yarn install && composer install && symfony server:start ",
+        "install:database": "php bin/console doctrine:database:create && php bin/console doctrine:migrations:migrate && php bin/console doctrine:migrations:migrate",
+        "fixture": "php bin/console doctrine:fixtures:load"
     }
 }
