--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+         - { path: ^/add/*, roles: ROLE_USER }
+         - { path: ^/appointment/*, roles: ROLE_USER }
+         - { path: ^/client/*, roles: ROLE_USER }
+         - { path: ^/compagny/*, roles: ROLE_USER }
+         - { path: ^/exchange/*, roles: ROLE_USER }
+         - { path: ^/invoice/*, roles: ROLE_USER }
+         - { path: ^/quotation/*, roles: ROLE_USER }
+         - { path: ^/ticket/*, roles: ROLE_USER }
          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/*, roles: ROLE_USER }
